examples/fail/fail_exception_top_level/project.bri
import * as std from "std";

export const project = {
  dependencies: {
    std: "*",
  },
};

interface TestType {
  foo: string;
  bar: string;
}

throw new Error("top level exception");
export default () => {
  return std.directory();
}
